Fri Oct 12 00:30:17 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (ioctl_narg_len, linux_iocparm_len): reinstantiate linux
	  specific narg length calculation.
	* test/ruby/test_io.rb (test_ioctl_linux2): add new test for old and
	  unstructured ioctl.

Fri Oct 12 00:30:17 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (ioctl_narg_len): don't use _IOC_SIZE macro on Linux.
	  On Linux some constants for ioctl(2) doesn't include the size of
	  its return value and 16bit value; for example FIONREAD 0x541B.
	  Moreover the manual, ioctl_list(2),  says "Note  that  the  size
	  bits  are  very unreliable: in lots of cases they are wrong,
	  either because of buggy macros using sizeof(sizeof(struct)),
	  or because of legacy values."
	  So we shouldn't use it.

Tue Sep 25 09:30:36 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/mkexports.rb: should not export DllMain().
	  reported by luis at [ruby-core:46743] [Bug #6790], solved by
	  Heesob Park, and confirmed by nobu.

Mon Sep 24 16:34:07 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* include/ruby/win32.h (rb_w32_pow): add new function.
	  We use powl() instead of broken pow() for x64-mingw32. This workaround
	  fixes test failures related to floating point numeric.
	  [ruby-core:46686] [Bug #6784]

Mon Sep 24 10:38:55 2012  Luis Lavena  <luislavena@gmail.com>

	* test/win32ole/test_win32ole_method.rb (is_ruby64?): Correct platform
	  used to identify mingw-w64 (x64-mingw32). Patch by Hiroshi Shirosaki.
	  [ruby-core:46651][Bug #6782]

Mon Sep 24 10:37:56 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/test/unit/parallel.rb: workaround fix for rubygems.
	  RubyGems can't find rake if the source directory is not equal to
	  the directory which is running the test. [Bug #6604]

Fri Sep 21 19:53:38 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_call): should convert a Bignum value to
	  unsigned long long on Win64.